Call nsIUnicharEncoder::Finish to ensure the converted string is terminated, bug 179392, r=shanjian, sr=bzbarsky